# filething

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DEMO.md  HANDOFF.md  LICENSE  README.md  TODO.md  clippy.toml  dist-workspace.toml  package.json
.github/workflows/: backend.yml  ci.yml  release-build-setup.yml  release.yml  rust.yml
apps/cli/: Cargo.toml
apps/cli/src/: auth.rs  commands.rs  config.rs  credentials.rs  env.rs  errors.rs  logrotate.rs  main.rs  progress.rs  service.rs  signed_vault.rs
apps/cli/tests/: cli_flow.rs
crates/ft-block/: Cargo.toml
crates/ft-block/src/: lib.rs
crates/ft-chunker/: Cargo.toml
crates/ft-chunker/src/: lib.rs
crates/ft-conflict/: Cargo.toml
crates/ft-conflict/src/: lib.rs  merge.rs
crates/ft-coordinator/: Cargo.toml
crates/ft-coordinator/src/: lib.rs
crates/ft-core/: Cargo.toml
crates/ft-core/src/: lib.rs
crates/ft-daemon/: Cargo.toml
crates/ft-daemon/src/: lib.rs
crates/ft-diff/: Cargo.toml
crates/ft-diff/src/: lib.rs
crates/ft-engine/: Cargo.toml
crates/ft-engine/src/: clone.rs  commit.rs  context.rs  error.rs  gc.rs  lib.rs  metrics.rs  pull.rs  run.rs  scan.rs  secrets.rs
crates/ft-engine/tests/: junk_ignore.rs  pull_reconcile.rs  scan_commit.rs  two_devices.rs  watch_resilience.rs
crates/ft-fsmap/: Cargo.toml
crates/ft-fsmap/src/: lib.rs
crates/ft-hash/: Cargo.toml
crates/ft-hash/src/: lib.rs
crates/ft-index/: Cargo.toml
crates/ft-index/src/: lib.rs
crates/ft-manifest/: Cargo.toml
crates/ft-manifest/src/: lib.rs
crates/ft-vault/: Cargo.toml
crates/ft-vault/src/: lib.rs
crates/ft-watcher/: Cargo.toml
crates/ft-watcher/src/: lib.rs
diary/: 2026-06-25.md  2026-07-01.md
docs/: BUILD-PLAN.md  MAC-SETUP.md  PRODUCTION-SETUP.md  format.md
docs/adr/: 0001-derived-path-policy.md  0002-cid-excluye-data-key.md  0003-data-key-nonce-deterministas.md  0004-data-key-en-sidecar.md  0005-manifest-btree-paginacion-determinista.md  0006-colision-nfc-es-conflicto.md  0007-gc-grace-period-retention-floor.md  0008-convex-dedup-es-cache.md  0009-fastcdc-16-64-256.md  0010-primitivas-cripto.md  0011-exclusion-basura-plataforma.md  0012-gc-mvp-account-wide.md  0013-infra-gestionada-auth.md  0014-auth-real-better-auth.md  0015-escrow-v1-claves-en-convex.md  0016-vault-firmado-urls-prefirmadas.md  0017-vault-warm-batch-y-daemon-por-defecto.md  0018-descarga-concurrente-en-pull.md  0019-directorios-entradas-manifest.md
infra/: .env.cloud.example  .env.example  README.md  docker-compose.yml
infra/scripts/: create-bucket.sh  print-env.sh  up.sh
memories/: MEMORY.md  communication-style.md  filething-project.md
scripts/: cloud-deploy.sh  cloud-smoke.sh  demo-gates.sh  runbook-e2e-mac-vps.sh
