[package]
name = "ft-block"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ft-core = { workspace = true }
ft-hash = { workspace = true }
thiserror = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rand = { workspace = true }
