[package]
name = "ft-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ft-engine = { workspace = true }

tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
