[package]
name = "ft-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ft-engine = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `test-util` (not in tokio's "full") powers #[tokio::test(start_paused = true)]:
# the quarantine-backoff tests drive the retry timers on virtual time.
tokio = { workspace = true, features = ["test-util"] }
