[package]
name = "ft-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ft-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
